add ability for multiple IR actions per one button press

--- a/templates/remote.html
+++ b/templates/remote.html
@@ -5,6 +5,6 @@
 <div class="container">
     {% for option in options %}
         <button class="irbutton" 
-            onclick="sendCode('{{option.remote}}', '{{option.button}}')">{{option.name}}</button>
+            onclick="sendCodes('{{option.actions}}')">{{option.name}}</button>
     {% endfor %}
 </div>
