--- a/templates/switches.html
+++ b/templates/switches.html
@@ -7,5 +7,5 @@
         <button name="{{switch.ip}}" class="status{{switch.status}} switch" 
             onclick="toggleLights({{loop.index0}})">{{switch.name}}</button>
     {% endfor %}
-    <button class="switch" onclick="reload()">Reload</button>
+    <!-- <button class="switch" onclick="reload()">Reload</button> -->
 </div>
