--- a/templates/switches.html
+++ b/templates/switches.html
@@ -1,11 +1,15 @@
 
-<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/switches.css')}}">
-<script src="{{url_for('static', filename='scripts/switches.js')}}"></script>
+<head>
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/switches.css')}}">
+    <script src="{{url_for('static', filename='scripts/switches.js')}}"></script>
+</head>
 
-<div id="switches" class="container">
-    {% for switch in switches %}
-        <button name="{{switch.ip}}" class="status{{switch.status}} switch" 
-            onclick="toggleLights({{loop.index0}})">{{switch.name}}</button>
-    {% endfor %}
-    <!-- <button class="switch" onclick="reload()">Reload</button> -->
-</div>
+<body>
+    <div id="switches" class="container">
+        {% for switch in switches %}
+            <button name="{{switch.ip}}" class="status{{switch.status}} switch"
+                onclick="toggleLights({{loop.index0}})">{{switch.name}}</button>
+        {% endfor %}
+        <!-- <button class="switch" onclick="reload()">Reload</button> -->
+    </div>
+</body>
