--- a/static/styles/plugs.css
+++ b/static/styles/plugs.css
@@ -1,4 +1,3 @@
-
 .container {
     width: 100%;
     height: 100%;
@@ -6,7 +5,7 @@
     flex-direction: column;
 }
 
-.switch {
+.plug {
     margin: auto;
     width: 100%;
     height: 100%;
