--- a/templates/root.html
+++ b/templates/root.html
@@ -1,8 +1,5 @@
 <head>
-    <title>Remote</title>
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', path='/styles/remote.css')}}">
-    <script src="{{url_for('static', path='/scripts/remote.js')}}"></script>
-
+    <title>Tarantula</title>
     <link rel="apple-touch-icon" sizes="180x180" href="{{url_for('static', path='/favicon/apple-touch-icon.png')}}">
     <link rel="icon" type="image/png" sizes="32x32" href="{{url_for('static', path='/favicon/favicon-32x32.png')}}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{url_for('static', path='/favicon/favicon-16x16.png')}}">
@@ -10,10 +7,5 @@
 </head>
 
 <body>
-    <div class="container">
-        {% for button in buttons %}
-            <button class="irbutton"
-                onclick="buttonPress('{{button.id}}')">{{button.name}}</button>
-        {% endfor %}
-    </div>
+    Hello World
 </body>
