--- a/templates/remote.html.jinja
+++ b/templates/remote.html.jinja
@@ -2,11 +2,7 @@
     <title>Remote</title>
     <link rel="stylesheet" type="text/css" href="{{url_for('static', path='/styles/remote.css')}}">
     <script src="{{url_for('static', path='/scripts/remote.js')}}"></script>
-
-    <link rel="apple-touch-icon" sizes="180x180" href="{{url_for('static', path='/favicon/apple-touch-icon.png')}}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{url_for('static', path='/favicon/favicon-32x32.png')}}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{url_for('static', path='/favicon/favicon-16x16.png')}}">
-    <link rel="manifest" href="{{url_for('static', path='/favicon/site.webmanifest')}}">
+    {% include 'favicon.html.jinja' %}
 </head>
 
 <body>
